# Primetrade-Assignment

./: .buildinfo  .gitignore  README.md  api.html  docker-compose.yml  genindex.html  index.html  objects.inv  overview.html  py-modindex.html  search.html  searchindex.js
.doctrees/: api.doctree  environment.pickle  index.doctree  overview.doctree
.github/workflows/: docs.yml
_modules/: index.html
_modules/backend/: main.html
_modules/backend/api/v1/endpoints/: auth.html  tasks.html  users.html
_modules/backend/core/: config.html  security.html
_sources/: index.rst.txt
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8d71d4f0d636_init.py
backend/src/backend/: main.py
backend/src/backend/api/: deps.py
backend/src/backend/api/v1/: router.py
backend/src/backend/api/v1/endpoints/: __init__.py  auth.py  tasks.py  users.py
backend/src/backend/core/: config.py  logging.py  security.py
backend/src/backend/db/: base.py  session.py
backend/src/backend/models/: __init__.py  task.py  user.py
backend/src/backend/schemas/: task.py  user.py
docs/: api.rst  conf.py  overview.rst  requirements.txt
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/lib/: api.ts
